03-pihole-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
spec:
  selector:
    app: pihole
  ports:
  - port: 8008
    targetPort: 80
    name: pihole-admin
  - port: 5355
    targetPort: 53
    protocol: UDP
    name: dns-udp
