04-pihole-ingress-2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole
            port:
              number: 8008
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pihole-dns-tcp-ingress
spec:
  entryPoints:
    - tcp-dns
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pihole-dns-tcp
          port: 5354
          weight: 10
